[package]
name = "memegenerator"
version = "0.1.0"
authors = ["Matthew Caron <matt@mattcaron.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
imageproc = "0.23.0"
image = "0.24.8"
rusttype = "0.9.3"